feat: Implement WorkflowManager for library, series, and book navigation
- Added WorkflowManager class to handle user input for navigating libraries, series, and books.
- Implemented methods for handling input in different modes: LIBRARIES, SERIES, BOOKS, and READER.
- Integrated with kavita_client to fetch libraries, series, and book volumes.
- Updated state management in the database for cursor positions and selected items.

chore: Add Playwright dependency

- Updated pyproject.toml and uv.lock to include Playwright version 1.57.0 for browser automation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pydantic-settings>=2.0.0",
     "python-multipart>=0.0.6",
     "colorlog>=6.10.1",
+    "playwright>=1.57.0",
 ]
 
 [project.optional-dependencies]
